--- a/app/assets/stylesheets/variables.scss
+++ b/app/assets/stylesheets/variables.scss
@@ -1,2 +1,3 @@
 $taskbar-size: 9vmin;
 $taskbar-icon-size: 7vmin;
+$default-border: 0.3vh solid #5d749e;
